--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="shortcut icon" type="image/png" sizes="32x32" href="src/favicon/favicon-32x32.png">
     <link rel="manifest" href="src/favicon/site.webmanifest">
     <link rel="stylesheet" href="src/css/main.css">
+    <link rel="stylesheet" href="src/css/reset.css">
 </head>
 <body>
 
