--- a/src/veterans/1/index.html
+++ b/src/veterans/1/index.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -74,7 +74,8 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
         <img src="1.jpeg" alt="Андросова Федора Николаевна">
@@ -82,10 +83,14 @@
 
     <h1>Андросова Федора Николаевна</h1>
 
+    <p>Мин Андросова Федора Николаевна 1928с. Дьэһэй нэһилиэгин кэргэҥҥэ төроөөбүтүм Саскылаах һ клстаах оскуолатын 1945с. 7 ылааһын бүтэрбитим онтон Булуҥҥа күһүүргэ Педучилища баар үһү, биһигини 2 озону озону онно үэрэнэ барыҥ диэн ыппыттара Усть-Оленекка Сельсоветка тиийбиппитигэр Бүлүү Училищата Якутскайга көспүтэ энэбиттэрэ онон тотторү кэлбиппит. Онтон комсомоллаах этибит онон удьа бөһүолэҕэр ааҕар балаҕан  сэбиэ диссэйинэн үлҥэ ыппыттара. Ол кэнниттэн хас сылын Якутскайга үэрэнэ бара сатаабыппыт ол бириэмэҕэ самолет сылдьыбат этэ, онон кыайан үэрэммэтэхпит. Онтон бибилиотека сэбиэдэссэйинэн үлэлээбтитим, онтон госбаҥҥа операционнай булгалтериинэн үлэлээбитим ол инньитинэн Архивка уонна загсаҕа үлэлээбитим онтон доруобуйабыттан молбо 3 үнэн хас да сылла эттэнэсыльдьыбытым уонна 1975 c. книга  магазиныгар үлэлээбитим онтон  Якутскайга операцияламмытым 1947-5 с с райсоветка эвентутан оҕон талыллабытым  оҕолорун улахан кыыьым библиотекаҕа үлэлиир, орто кыьым инвалид сүрэҕэ операциялаах Кангаласс ботролҥор олорор кэргэннээх 1  оҕолоох кыра уолум Маят диэн экпедия участаҕар үлэлиир Арьянов Александр Егорович. 10 сиэннээхпин 6 оҕо хос сиэннээхпин, бэйэм ол иннитигэр араас быстах үлэлэргэ үлэлии сылдьыбытымю. </p>
+
+    <p>Үлэ тыла ветерана Андросова Федора Николаевна.</p>
+
     <div>
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
