--- a/src/veterans/5/index.html
+++ b/src/veterans/5/index.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png"><link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -27,6 +26,7 @@
             width: 150px;
             height: 150px; 
             object-fit: contain;
+            margin-top: 10px;
         }
         .frame {
             border: 3px solid #000;
@@ -74,18 +74,30 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
-        <img src="1.jpeg" alt="Андросова Федора Николаевна">
+        <img src="5.jpeg" alt="Андросова Федора Николаевна">
     </div>
 
-    <h1>Андросова Федора Николаевна</h1>
+    <h1>Андросова Варвара Федоровна</h1>
+
+    <p>1911 с. Саскылаахка төрөөбүтэ. Билигин үҥ саастаах.</p>
+    <p>Сэрии буоларын саҕана кирииччэ үктүүр этим. Ол сырыттахпытына мунньах буолар диэн, барыбытын ыҥыран ылбыттара. Уонна сэрии буолла диэн иҺитиннэрбиттэрэ истибиппин итэҕэйбэтэҕим.</p>
+    <p>Сэрии созона Саскылаахка кыаммат ыалларга, фроҥҥа ичигэс таҥас, үтүлүк тигэр этибит.</p>
+    <p>Үэрэх үчүгэйдик барбат этэ,  ыарахан сыллар буолуталаан ааспыттара. Сэрии бүтүүтүн Саскылаахка дьоннор кэлбиттэриттэн билбитим.</p>
+    <p>Сэрии кэлиитти ас суох этэ. Элбэх киьи аччыктаан олбҮттэрэ. Мин ыксааммын оҕорбор оту хомуйан баран ильдьиритэн биэрэр этим.</p>
+    <p>Сарсырда эрдэттэн киҺээҥҥэ дылы бокуойа суох үлэлиирбит. 7 сылы быһа кирпииччэ үктээбитим. Олус ыарахан үлэ этэ. Ол саҕана техника суох буолан, барытын илиибитинэн оҥорон таһаарар этибит. Ол курдук  ыарахан кэмнэр ааспыттара.</p>
+    <p>Билиҥҥи ыччаттарга баҕарар санаам диэн үэрэхтэригэр үчүгэйдик уөрэниннэр, үлэьит киһи буоллуннар. </p>
+    <p>Ыарахантан куттаныман, толлуман.</p>
+    <p>Варвара Федоровна 3 оҕолоох, икки оҕону ииттэ ылбыт. Билигин өолбоөх сиэннэрдээх, хос сэннэрдээх. Улахан уола Саскылаахка пожарнайга улэлиир.</p>
+    <p>Кыыһа больницаҕа поворынан үлэлиир.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
