--- a/src/veterans/7/index.html
+++ b/src/veterans/7/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#808080" />
-    <title>Ветераны Анабарского Улуса | Андросова Федора Николаевна</title>
+    <title>Ветераны Анабарского Улуса | Акакиева Татьяна Егоровна</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png"><link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -74,18 +73,21 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
-        <img src="1.jpeg" alt="Андросова Федора Николаевна">
+        <img src="7.jpeg" alt="Акакиева Татьяна Егоровна">
     </div>
 
-    <h1>Андросова Федора Николаевна</h1>
+    <h1>Акакиева Татьяна Егоровна</h1>
+
+    <p>Мин 1927 сыллаахха олунньу 8 күнүгэр Сааскылаахха төрөөбүтүм. Төрөппуттэрим, Акакиева Агафья Дмитриевна, аҕам Акакиев Егор Степанович. Биһиги оҕолор 8 этибит, мин саамай кыраларабын. 10 саастаахпар оскуолаҕа киирбитим уонна 44 сыллаахха бүтэрбитим, оччотооҕуга ситэтэ суох 7 кылаастаах этэ. Биһиги үөрэнээччилэр сэрии ыар бириэмэтин билбиппит, учууталарбыт олус учугэй, үтүө санаалаах, үөрэххэ-үлэҕэ биһигини үөрэтэллэрэ, ордук мин учууталбын Николай Егорович Васильевы ордук күндүтүк саныыбын. Учууталлардыын, төрппүттэрдиин, улахан дьоннордуун, оҕолордуун сэрии бара турар кэмигэр сайынын, кыһынын харса суох үлэлиирбит, ол курдук колхозка саһаанныырбыт, кирпииччэ үктүүрбүт, болуоттуурбут, дьиэ сыбыырбыт, сугуннаан заготовкаҕа туттарабыт. Ити бириэмэҕэ элбэх хаһаайыстыбанан үлэлэргэ улахан дбоннуун тэҥҥэ сылдьыһарбыт, бу үлэбитинэн фашистары утары суһар курдук сананарбыт, оннук да өйдөтөллөрө. Оскуолаҕа үөрэнэрбитигэр хас биирдии үчүгэй сыана фашиһы утары этэ. Оскуоланы бүтэрээт «кыһыл чуумҥа» учууталлаан улахан дбоннору ааҕарга үөрэппитим. Ити кэнниттэн райкомҥа машинисканан үлэли сырыттахпына кыайыы буолбут  үөрүүлээх күнүн умнубаппын. Оройуоммутугар үөрүүлээх сурах бар дьону үөрпутэ. 1948 сыллаахтан 52 сыллаахха дылы балыыһаҕа медсестранан үлэлээбитим, оччотооҕу фельдшердар олус аламаҕай, үлэлэргэр бэриниилээх дьоннор этилэр, эдэр ыччаты үөрэтэллэрэ, бэйэлэригэр тардыллара. Ити үлэлии сылдьан медицинскай училищеҕа бара сатаабытым, суол суох буолан барбакка хаалбытым. 1952 сылтан сберкассаҕа РПО-ҕа кассирыныан, онтон 53 сылтан отдел культураҕа бухгалтерынан, 57 сылтан РОНО-ҕа пенсияҕа тахсыахпар дылы үлэлээбитим. Пенсияҕа тахсан баран олоботоҕом, орто оскуолаҕа тех үлэһитинэн ааспыт сылга дылы үлэлээбитим. 1994 сылтан сынньалаҥҥа, дьиэҕэ олоробун. Киһи оҕо, дьон-сэргэ ортотугар сырыттаҕына санаата, сүргэтэ көтөҕуллэр, онон, оҕолоор үлэ киһини кынаттыыр, кырдьаргын жа умнаҕын. Мин уонна мин саастыылаахтарым ааттарыттан эһиэхэ, оҕолорго билигин суол үөрэнэргэ аһаҕас, онтон кэлэр кэскилгитин үөрэхтээх дьон эрэ буоллаххытына дьоллоохтук олорон, үлэлээн дойдуга туһалаах киһи буолар туһуттан кыһаллыҥ. Биһиги ыраах хоту дойду сэрии бириэмэтин оҕолоро үлэттэн дьолу булбуппут. Эдэр очакка баҕарыам этэ күн сиригэр төрөөн-үөскээн оллорон иэскитин үтүө суобастаахтык, чиэһинэйдик олорууттан туох кэлиэй. Билигин Чечня сэриитэ бара туорарынан сибээстээн бу сэрии түргэнник тохтууругар, инникитин сэрии буолбатгар диэн баҕарабын.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
