--- a/src/veterans/9/index.html
+++ b/src/veterans/9/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#808080" />
-    <title>Ветераны Анабарского Улуса | Андросова Федора Николаевна</title>
+    <title>Ветераны Анабарского Улуса | Анисимова Татьяна Федоровна</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png"><link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -74,18 +73,22 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
-        <img src="1.jpeg" alt="Андросова Федора Николаевна">
+        <img src="9.jpeg" alt="Анисимова Татьяна Федоровна">
     </div>
 
-    <h1>Андросова Федора Николаевна</h1>
+    <h1>Анисимова Татьяна Федоровна</h1>
+
+    <p>Мин 1932 сыллаахха Өлөөн улууһун Дьэлиндэ нэһлиэгэр төрөөбүтүм. 6 сааспар ийэм өлөн оҕо дьиэтигэр интернатка олоро киирбитим. Күһүн 1939 сыллаахха сэттэбэр аан бастаан оскуолаҕа үөрэнэ киирбитим. Бииргэ төрөөбүттэрим аҕыспыт этэ. Мин ийэбэр бүтэһик оҕото этим. Убайдарым уонна эдьиийдэрим эмиэ оскуолаҕа үөрэнэллэр этэ. Оччолорго, ортто убайым оскуоланы бүтэрэн учуутал үөрэҕэр үөрэнэ сылдьара. Онтон үөрэҕин бүтэрэн учууталлыы сылдьан эдэр сааһыгар өлбүтэ. Ол бириэмэҕэ, былыр уоспа, корь ыарыытыгар эдьийдэрим эмиэ утуу-субуу эдэр саастарыгар, олох диэни билбэккэ ыалдьан өлөхтөөбүттэрэ. Аҕабыт булчут этэ, үксүн тыаҕа сылдьара. Аҕам эмиэ өр олорботоҕо, кыргыттарын кэнниттэн бараахтаабыта. Мин төгүрүк тулаайах хаалан баран интернат-оскуолаҕа олорон үөрэммитим. 1942 сыллаахха төрдүс кылааһы бүтэрэн баран салҕыы Өлөөн орто оскуолатыгар үөрэнэ барбытым. Ол саҕана Өлөөҥҥө табаннан айанаан тиийбиппит. Салҕыы үөрэммитим. Бу ынырыктаах сыллар этэ. Сэрии буола турар кэмигэр, биһиги, оскуола оҕолоро түүннэри-күнүстэри улахан дьону кытта тэҥҥэ үлэлэһэр этибит. Фроҥҥа ыытар таҥастары тигэн көмө оҥорорбут. Ол саҕана оҕолор улахан дьону кытта тэҥҥэ бириэмэ аахсыбакка үлэлиирбит. Сайынын луук, отон, сугун хомуйан хоскуоска туттарарбыт. 1945с. Сааскы сынньалаҥҥа VIII кыслааска үөрэнэ сылдьан, Сааскылаахха эдьиийим ыҥыран, элбэх оҕолоох эдьиийбэр илии-атах буола көмөлоһө кэлбитим. Салҕыы оскуолабар үөрэнэ бараары гыммытым, суол сабыллан кыайан барбатаҕым. Устунан Сааскылаахха хаала ыстаадаҕа бостуугунан үлэлээбитим. Суол-иис суох буолан устунан үөрэммэккэ хаалбытым. Оччолорго Сааскылаах оскуолата VII кылаастаах этэ. Ол саҕана бэрэссэдээтэлинэн Андросов Пётр Петрович үлэлиир этэ. Миигин ыстаадаҕа үлэлээ, үлэһит илии тиийбэт, салҕыы үөрэнэ бараргар көмөлөһүөхпүт диэбиттэрэ, ол иһин сөбүлэһэн тыаҕа үлэлии тахсыбытым.</p>
+    <p>1953с. Сааскылаахха, райпоҕа кылаабынай поварынан үлэҕэ киирбитим. 1960с госбаҥҥа охраннигынан үлэлээбитим. Ол курдук уопсай үлэм ыстааһа 58 сыл. 1983с. Пенсияҕа тахсыбытым. Ылдьар буолан устунан олоробун. Түөрт оҕолоохпун, сиэннэрдээхпин уонна хос сиэннэр бааллар.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
