--- a/src/veterans/11/index.html
+++ b/src/veterans/11/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#808080" />
-    <title>Ветераны Анабарского Улуса | Андросова Федора Николаевна</title>
+    <title>Ветераны Анабарского Улуса | Арьянова Екатерина Алексеевна</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png"><link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -74,18 +73,21 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
-        <img src="1.jpeg" alt="Андросова Федора Николаевна">
+        <img src="11.jpeg" alt="Арьянова Екатерина Алексеевна">
     </div>
 
-    <h1>Андросова Федора Николаевна</h1>
+    <h1>Арьянова Екатерина Алексеевна</h1>
+    <p>Мин Арьянова Екатерина Алексеевнабын 1932 Сыллаахка Кулун тутар 8 күнүгэр төрөөбүтүм. Төрөөбүт сирим Арыйаан хайата онно дьоннорум сирдэрэ. Онтон 7 сааспар олскуолаҕа киирбитим. 1941 сыллаахка үөрэнэ сырыттахпына сэрии буолубта. Сэрии сылларыгар ньоммутугар көмөлоһөн мас кэрдэн саһааннаан, уонна холкуоска тыс, тирии, имистэ тичистэ, биһиэхэ оскуола оҕолоругар үтүлүк кээнчэ тиктэлэр этилэр. Ас-таҥас кытаанах этэ киилэн 400гр оҕоҕо этэ.</p>
+    <p>Ол үорэнэ сыльдьан ыальдьан оскуолабын ситэ бүтэрбэтэҕим. Дьонмун кытта үлэлии сыльдьыбытым, онтон кэргэн тахсан биэс оҕону төрөөбүтүм, оҕолор билигин бааллла иккитэ ыам сорохтор кэргэнэ суохтар. Сиэннэрим аҕыстар, биир хос сиэннээхпин. Эдэр эрдэхпиттэн кырдьыахпар дылы үлэ арааһын үлэлээбитим, пенсияҕа тахсыбытым 20 сыл буолла, ол да буоллун тигэбин. Аҥаар хараҕым көрбөт да буоллар. Оҕонньорум суох буолбута  биир сылын туолуо, кини эмиэ тыыл ветерана этэ. Билигин үс оҕом биир сиэннээхпин кытта олоробун.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
