--- a/src/veterans/2/index.html
+++ b/src/veterans/2/index.html
@@ -8,11 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="/src/favicon/favicon-32x32.png"><link rel="manifest" href="/src/favicon/site.webmanifest">
     <style>
         * {
             margin: 0;
@@ -74,7 +73,8 @@
 </head>
 <body>
 
-    <img class="icon" src="/80pobeda.png">
+    <img class="icon" src="/src/main/80pobeda.png">
+    <img class="icon" src="/src/main/95_anabar.png">
 
     <div class="frame">
         <img src="2.jpeg" alt="Андросова Марфа Михайловна">
@@ -86,6 +86,6 @@
         <a href="/" class="button">Назад</a>
     </div>
 
-    <img class="full-width" src="/podval.png">
+    <img class="full-width" src="/src/main/podval.png">
 </body>
 </html>
