New Admin Dashboard and login system

--- a/src/veterans/10/index.html
+++ b/src/veterans/10/index.html
@@ -81,6 +81,12 @@
     </div>
 
     <h1>Антонов Никифор Филиппович</h1>
+    <p>1919 с. олунньу 10 күнэ. Үөлэ Анаабыр өрүстэн тахсыы. Табаһыт.</p>
+    <p>Аҕам Антонов Филлип Афанасьевич табаһыт. Бииргэ төрөөбүт 2, кыыс – Айааса.</p>
+    <p>Бастакы абаарыстыбаҕа аҕата үлэлээбит, 1-2 табны кинилэргэ мулньан онтон ыстаада тэринним.</p>
+    <p>1939 с. мантан Охотскайга Аллаах Үүҥҥэ көмүс хостонор Үрэҕэр таба үүрэн 1,5 сыл устата айаннаан тиийбиттэр. Күнү быһа хаһыстаан, киэһэ кыайан саҥарбат буолаҕын. 2240 табаны 12 буолан үүрбүттэр, биир да итэҕэһэ суох тиийбиттэр. Бэрт уһун, ыарахан, эрэйдээх айан. Аһы бэйэбит астанан, таҥаспытын бэйэбит тиктэр этибит.</p>
+    <p>Халҕаннаахтан үүрбуттэр, Анаабыр табалара. Аллаах Үүнтэн 3 киһи кэлэн ветеринар, завхоз, биригэдиир илдьэ барбыттар, сирдээн, хаартылаан. Мантан дьаан суолун устулан барбыттар. Бастаан Ленаны туоран саккырыырга тиийбиттэр. Эбээннии билбэхкэ кыайан өйдөспоккө эрэйдэммиттэр. Саккырыыртан Верхоянскайга онтон айан. Оймөкөөн таһыгар сайылаабыттар. Онон үрэҕинэн барбыттар хайа үэнэ тахсан Оймөкөөн куоратын көрөллөр, онно 50 – лии байыаннай самолет кэлэн түнэллэрин көрөллөр. Тиийэн төннүөхтээх эбиттэр да дьону сэриигэ ыланнар тохтообуттар, 1 сыл сыльдьыбыт.</p>
+    <p>Көмүс сууйааччылар эрэ хаалбыттар эбит. Онтон кинини Якутскайга салдааттара илтилэр. Параходтан түһээккитин кытта баанньыкка илпиттэр 400 – кэ киһи. Онтон төттөрү параходка илпиттэр. Уҥуоҕа кыра буоолан саамай бүтэһик сылдьыбыт. Испииһэктэн киллэрэн испиттэр, арай 3 буолан хаалбыттар. Онтон тойоттор тохтоппуттар, хантан сылдьаҕын диэбиттэригэр Анаабыртан диэбит, ону кырсаһыт, табаһыт хаалаҕын диэбиттэр. Ях – га 2 сыл сылдьан конинсоюзка (инбэлииттргэ) конэюктаабыт, онтон наркомпросска кочеггардаабыт 12 оһохко. Бастаан сатаабакка эрэйдэммит. Онтон Алданнаабыт. Онтон көмүскэ үлэлии барбыт. 1947 с. колхуозка киирэр. Бостуугунан, мас таһыытыгар үлэлээбит. Кэргэннэммит 50 – ча табаҕа. Икки колхоз холбоһор. 1947 – 1974 с. диэри сылдьыбыт. 1974 с. – пенсия, уурайбыт.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
