--- a/src/veterans/16/index.html
+++ b/src/veterans/16/index.html
@@ -81,6 +81,14 @@
     </div>
 
     <h1>Винокуров Константин Николаевич</h1>
+    <p>Мин аҕам аата Винокуров Константин Николаевич. Кини 1930с. саас ыам ыйын 3күнүгэр Анаабыр оройуонугар Дьэһэй нэһилиэһэр төрөөбүт.</p><br>
+    <p>Ийэтэ (эбэм) Мария Егоровна Матвеевна диэн, аҕата (эһэм) Николай Егорович Винокуров. Аҕам иккиэлэр эрэ үһү. Балтыта киниттэн үс сыл балыс. Уопсайа эбэм уонна оҕоломмотох. Икки кэнники оҕо турбут. Ол иһин аҕабын эбэтэ, ол эбэтэр аҕам эдьиийэ Ылдьаана эбэм, абааһылартан харыстаан Кээкии-Куукуу диэн ыҥырара үһү. Ол иһин аҕабын Кээкии диэн ыҥыраллара. Балта Дора диэн этэ. Кинини Бөдүөсэ дииллэрэ. Кини эдэр сааһыгар төрүүрүгэр өлбүтэ.</p><br>
+    <p>Аҕам кыра эрдэҕинэ дьоно, ийэлээх аҕата икииэн табалыыллара, бултууллара. Ол иһин аҕабын эбэтэ улаатыннарбыт. Аҕам ийэтэ сааһыт бэрдэ этэ. Оннооҕор биһиги кыра эрдэхпитинэ бэйэтэ куруппааскыланара, хапхааннанара. Эһэм үйэтин-сааһын тухары табаһыт, булчут буолан, аҕам кыра эрдэҕиттэн бултка эриллэн улааппыта.</p><br>
+    <p>Аҕам аҕыһыгар Дьэһэй бөһүөлэгэр үөрэнэ киирбитэ. Аҕа дойду сэриитин алдьархайдаах сылларыгар чороччу улаатан эрэр уолчаан Челюскин колхозка бостуугунан, мас кэрдиитигэр уо.д.а кыра-ара үлэлэргэ улахан дьонтон хаалсыбакка тэҥҥэ сылдьан күнүстэри-түүннэри үлэлээн улааппыта. Сэрии бүппүтүн кэннэ аан бастаан «Табаһыт кыһата», «Ленин» колхозтарга бостуугунан, булчутунан үлэлээбитэ.</p><br>
+    <p>40-с сыл бүтүүтүгэр Уудьаҕа райноҕа буҕаалтарынан, ыскылаакка приемщигынан үлэлээбитэ. Уудьаҕа биэс сыл үлэлээн баран Халҕаннаахха райпо буҕаалтарынан анаммыта. Ийэбин кытта 55 сыллаахха холбоспуттара. Халҕаннаахха биһиги аҕыс сыл олорбуппут. Ол кэмнэргэ аҕам икки сыл совет секретарынан талыллан үлэлээбитэ. Сааскылаахха 1965 сыллаахха көһөн кэлбиппит. </p><br>
+    <p>Аҕам үгүс махтал суруктардааҕа, грамоталардааҕа. Хаста да Социалистическай үлэ ударнигын кыайыылааҕа, Аҕа дойдуну көмүскүүр Улуу сэрии үлэҕэ килбиэнин иһин, В.И.Ленин төрөөбүтэ сүүс сыла туолуутунан үлэҕэ килбиэнин иһин, Улэ ветерана, Кыайыы 30, 40сс. Медальларынан, үгүс бочутунай грамоталарынан, махтал суруктарынан наҕараадаламмыта.</p><br>
+    <p>Аҕам үйэтин-сааһын Анаабыр совхозка эҥкилэ суох үлэлээбит, эдэр ыччат, дьон-сэргэ убаастыыр киһилэрэ этэ. Билигин даҕаны аҕабын Анаабыр совхоз кыылчыт уолаттара ахта саныыллар. Өлүөн иннинэ Анаабыр совхозка кыылчыт уолаттарга наставник биригэдьииринэн үлэлээбитэ. Кэлин кыылдьыт уолаттар аҕабын чиэстээн биир үрэҕи аҕам аатынан ааттаабыт этилэр.</p><br>
+    <p>Мин аҕам 1999 сыллаахха күһүн ыарахан ыарыы кэнниттэн ыалдьан өлбүтэ.</p>
 
     <div>
         <a href="/" class="button">Назад</a>
