--- a/src/veterans/19/index.html
+++ b/src/veterans/19/index.html
@@ -82,6 +82,8 @@
 
     <h1>Винокуров Егор Романович</h1>
 
+    <p>Винокуров Егор Романович 1888с Саскылаах сэлиэнньэтигэр дьадаҥы эбэнки кэргэнигэр, уол икки аҕалаах ыалга, алтыс оҕонон төрөөбүтэ. Ыаллыы долганнар кыыстарын Дьэбгиэни кэргэн ылан биэс оҕону төрөппүттэрэ. 1930 сыллаахха Советскай былааһы олохтоспута, бандьыыттаһын кэмигэр сирдьитинэн кыһыл этэрээдигэр сылдьыбыта, командирдара Харлааскы – Петров Гаврил Иосифович диэн киһи этэ. Онно сылдьыспытын туһунан мэктиэ сурук баар, 1932 сыллаахха бэриллибит, Бэрдээҥкэ саанан N62577 нүөмэрдээх, уонна 38 солкуобай, 42 харчынан бириэмийэлэммитин. Булуҥ оройуонугар дьаамҥа икки баран кэлбит. 1944с «Челюскин» колхозка булгуйуулаах үлэлээх былаанын аһыры толорбут иһин харчынан бириэмийэлэнэҕит. 1944с «Отличник охотничего промысла» диэн Наркомзона СССР значогунан наҕараадаламмыт, уонна почетнай грамотанан. 1962c Саха АССР почетнай грамотанан наҕараадаланар, онтон ити сыллаахха 1962с ыам ыйыгар 16ч. Верховой Совет РСФСР почетнай грамотанан на5араадаламмыт. Онтон өлүөр диэри дойдугар «Чочурдаахха» олорбута. 1983с өлбүтэ. «Сиикэй талахха» кыһыл солдаттарыгар анаан памятник туруорбуттара.</p>
+
     <div>
         <a href="/" class="button">Назад</a>
     </div>
