--- a/src/veterans/2/index.html
+++ b/src/veterans/2/index.html
@@ -82,6 +82,14 @@
 
     <h1>Андросова Марфа Михайловна</h1>
 
+    <p>Мин Андросова Марфа Михайловна 1923 сыллаахха бэс ыйын 1 күнүгэр Саха АССР Анаабыр улууһун Дьэһэй нэһилиэгэр элбэх оҕолоох дьадаҥы дьиэ кэргэҥҥэ төрөөбүтүм. Аҕам Андросов Михаил колхозка араас үлэҕэ үлэлиирэ, ийэбит кыра сааспытыгар өлөн, аҕабыт биһигини ыалларга ииттэрэ биэртэлээбитэ. Аҕам миигин Алексей Афанасьевич Федора Николаевна Арьяновтар дьиэ кэргэннэригэр биэрэн ииттэрбитэ.Онно сыстан дьиэ ис-тас үлэтигэр көмөлөһөн олорбутум. Билигин бииргэ төрөөбүттэр үспүт.</p><br>
+    <p>Суол сылдьыһыы куһаҕаныттан Дьэһэй нэһилиэгин Халҕаннаахха көһөрөн киллэрбиттэрэ. Сэрии сылларыгар оборонаҕа таҥас тигиитигэр көмөлөспүтүм. Оччоттон харахпынан мөлтөх буоламмын тириини, тыһы таҥастааһыҥҥа сылдьааччыбын. Кэлин кирпииччэ үктээһинигэр , ремонт үлэтигэр, мас саһааннааһыныгар дьону кытта тэҥҥэ сылдьааччыбын. Урут бэлэм кирпииччэ манна аҕалыллыбат этэ, онон бэйэбит маннааҕы туойу кумахха былаан кирпииччэ оҥостон оһохторбутун туттааччыбыт.</p><br>
+    <p>1958 сыллаахха Халҕаннаахха детсад аһыллан үлэлээбитэ, онно оһох оттооччунан түүҥҥү нянянан үлэлээбитим. Оһох оттор киһи маһын бэйэтэ мастанар, маһы буоллар табанан таһыллара, сыарҕа үрдүттэн кэриэтэ мастанан орбуппут, саппаас кыстанан турар суоҕа. Ити курдук 1969 сыллаахха диэри детсадка үлэлээбитим. Онтон Сааскылаахха көһөн киирэн баран детсадка, хонтуораҕа тех үлэһитинэн, быт комбинакка быстах тыс имитээччинэн үлэлээбитим. Илиим сатыыр үлэм буолан аныаха да диэри таах олоруохтааҕар дьарыктанабын, онтум пенсиябар эбии дьиэ-уот төлөбүрүгэр наада.</p><br>
+    <p>Бэйэм биирдэ оҕоломмутум, ол таһынан үс оҕону иитэн улаатыннарбытым. Андросова Евдокия Михайловнаны аҕыс ыйдааҕар ылбытым, кини билигин специальностаах, икки оҕолоох ыал ийэтэ. Игорь улаатан баран өлбүтэ, кини оҕотун эмиэ оскуолаҕа киириэр диэри ииппитим. Петров Андрейы уончалааҕар ылбытым. Билигин өйөһөн-убаһан Андрейбынаан олоробут. Бэйэм уолум Саша үс оҕолонон баран үлэлии сылдьан өлөрүнэн өлбүтэ. Сашам икки оҕотун ииппитим. Марфам бухгалтер үөрэхтээх икки оҕолоох ыал ийэтэ. Билигин Депутатскайга олорор, үлэлиир. Мишам эмиэ билигин бэйэбэр баар, үлэтэ суох.</p><br>
+    <p>Кыанар эрдэхпинэ элбэх тэрилтэҕэ үлэлээбитим, элбэх тулаайах, кыаммат оҕолору иитэн улаатыннаран киһи оҥортообутум. Оҕолорум Дуня, Марфа сибээстэһэ тураллар, хардары таары көмөлөсүһэ олоробут. Андрейбынаан бииргэ харайсан олоробут, сырыыга сылдьарым, илиим-атаҕым буоллаҕа дии. Ити оҕолорбуттан алта сиэннээхпин, биэс хос сиэннээхпин.</p><br>
+    <p>Улууһум администрацията Улуу Кыайыы 50,55 сылларынан эҕэрдэ сурук, Анаабыр улууһа 60, 70 сылларынан эмиэ эҕэрдэ сурук туттарбыта.</p><br>
+    <p>Билигин көрөрбүнэн бастакы группалаах инбэлииппин, Тыыл Бэтэрээнэбин, онон улуус инбэлииттэрин обществолара, бэтэрээннэр сэбиэттэрэ көрдөстөхпүнэ көмөлөһөллөр уонна льготанан туһанабын.</p>
+
     <div>
         <a href="/" class="button">Назад</a>
     </div>
